Color contrast fixes for card hover, message text (#8057)
* Color contrast fixes for card hover, message text

* Override built-in semantic variable for message opacity

--- a/theme/common.less
+++ b/theme/common.less
@@ -200,7 +200,7 @@ pre {
     z-index: @filelistZIndex;
 
     // the scroll bar is always visible, but we hide it when needed
-    overflow-y: scroll; 
+    overflow-y: scroll;
 }
 
 .invisibleScrollbar::-webkit-scrollbar { 
@@ -209,10 +209,10 @@ pre {
 }    
 .invisibleScrollbar::-webkit-scrollbar-thumb { 
     display: none !important;
-}    
-.invisibleScrollbar::-webkit-scrollbar-track { 
-    background: transparent !important; 
-}    
+}
+.invisibleScrollbar::-webkit-scrollbar-track {
+    background: transparent !important;
+}
 
 
 #filelist .simtoolbar {
@@ -806,7 +806,7 @@ Field editors
 }
 .social-icons a.twitter {
     color: white;
-    background-color: #00aced;
+    background-color: #1da1f2;
 }
 .social-icons a.discourse {
     color: white;
